--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
-
     </head>
+
 <body>
-<header></header> 
+    <header></header> 
 
-<aside></aside>
-
-<main></main>
+<main>
+    <aside></aside>
+        
+</main>
 
 </body>
 
