added h1 and title.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <title>Our awesome website</title>
+  </head>
 
-<body>
-    <header></header> 
+  <body>
+    <header>
+      <h1>Our awesome website</h1>
+    </header>
 
-<main>
-    <aside></aside>
+    <main>
+      <aside></aside>
+    </main>
 
-</main>
+    <script src="script.js"></script>
+  </body>
 
-<script src="script.js"></script>
-</body>
-
-<footer></footer>
-
+  <footer></footer>
 </html>
