--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body></body>
+  <body
+    class="bg-fixed bg-cover bg-center"
+    style="background-image: url(./assets/images/HomePageBackground.jpg)"
+  ></body>
 </html>
