fixed image path issues for background images in css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <script defer src="./assets/js/homepage.js"></script>
   </head>
-  <body class="homepage-bg bg-fixed bg-cover bg-center relative">
+  <body class="homepage-bg relative">
     <header>
       <button
         id="menuButton"
