--- a/about.html
+++ b/about.html
@@ -11,29 +11,25 @@
     />
     <script defer src="./assets/js/homepage.js"></script>
   </head>
-  <body class="homepage-bg relative">
-    <header>
+  <body class="about-bg relative">
+    <header
+      id="logoBackgroundSmall"
+      class="bg-gradient-to-r from-transparent to-white flex-shrink"
+    >
       <button
         id="menuButton"
         class="absolute top-10 left-10 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
       >
         Menu
       </button>
+      <img
+        id="logoSmall"
+        src="./assets/logo/YesChefLogoBlack.svg"
+        alt="Yes, Chef Logo"
+        class="relative ml-auto mr-4"
+      />
       <div id="menuContainer"></div>
-      <!-- TODO: Add light/dark mode toggle on top right -->
     </header>
-    <main>
-      <div
-        id="logoBackground"
-        class="fixed bottom-5 left-0 bg-gradient-to-r from-transparent to-white flex-shrink items-center"
-      >
-        <img
-          id="logo"
-          src="./assets/logo/YesChefLogoBlack.svg"
-          alt="Yes, Chef Logo"
-          class="relative ml-auto mr-4"
-        />
-      </div>
-    </main>
+    <main></main>
   </body>
 </html>
