Finished adding 2 sections with h2/h3 and p elements

--- a/ChipotleChicken.html
+++ b/ChipotleChicken.html
@@ -4,11 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Al Pastor Cooking Guide</title>
-    <link rel="stylesheet" href="cooking.css"/>
+    <link rel="stylesheet" href="./assets/css/cooking.css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-fixed bg-cover bg-center" style="background-image: url(./assets/images/ChipotleChickenBackground.jpg)">
-        <p id="countdown">15:00</p>
+  <body
+    class="bg-fixed bg-cover bg-center"
+    style="background-image: url(./assets/images/ChipotleChickenBackground.jpg)"
+  >
+    <header class="background">Let's Start Cooking Chipotle Chicken!</header>
+    <main>
+      <section>
+        <h2>Marinate the chicken thighs</h2>
+        <p>1. Place the Chicken Thighs in a resealable bag, or large bowl. *Chef note: poke a few holes in the Chicken Thighs with a fork for even better results</p><br>
+        <p>2. Place the Chicken Thighs in a resealable bag, or large bowl. *Chef note: poke a few holes in the Chicken Thighs with a fork for even better results</p><br>
+        <p>3. Seal the bag or the bowl and place in the refrigerator</p><br>
+        <p>4. Allow the meat to marinate for at least an hour *Chef note: it is best if it is allowed to marinate overnight</p><br>
+      </section>
+      <section>
+        <h3>Cook the Chicken Thighs</h3><br>
+        <p>1. Remove the Chicken Thighs from the refrigerator *Chef Note: Set the bowl or resealable bag out on the counter for 30-45min before cooking</p><br>
+        <p>2. Preheat your BBQ grill before cooking *Chef Note: the hotter the better, as getting a little char on the marinade really brings out the flavor</p><br>
+        <p>3. Sear the Chicken Thighs 2min per side on the hot grill</p><br>
+        <p>4. Cook the Chicken Thighs until they are cooked through; 165-175 degrees internal temperature *Chef note: Chicken Thighs cook rather quickly on a hot grill, so keep a close eye on them</p><br>
+        <p>5. Let the Chicken Thighs rest for 10 minutes after they have been cooked, then serve in your favorite tacos, burritos, or as a stand-alone meat with your meal *Chef note: the Chicken Thighs will continue to cook while they rest, so make sure you plan for that in your cooking time and temperature</p><br>
+      </section>
+    </main>
 
     <script src="./cooking.js"></script>
   </body>
