started recipe html pages and added menus to them all

--- a/recipe-AlPastor.html
+++ b/recipe-AlPastor.html
@@ -12,64 +12,15 @@
     <script defer src="./assets/js/homepage.js"></script>
   </head>
   <body class="alPastor-bg relative">
-    <header
-      id="logoBackgroundSmall"
-      class="bg-gradient-to-r from-transparent to-white flex-shrink"
-    >
+    <header>
       <button
         id="menuButton"
         class="absolute top-10 left-10 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
       >
         Menu
       </button>
-      <img
-        id="logoSmall"
-        src="./assets/logo/YesChefLogoBlack.svg"
-        alt="Yes, Chef Logo"
-        class="relative ml-auto mr-4"
-      />
+      <div id="menuContainer"></div>
     </header>
-    <main>
-      <div
-        id="menu"
-        class="fixed top-0 left-0 h-full w-80 bg-white text-gray-900 transform -translate-x-full transition-transform z-10 flex flex-col"
-      >
-        <ul class="flex-shrink p-2">
-          <li class="block pl-2 pb-4 text-xl">Select a Recipe:</li>
-          <li>
-            <a href="./ChipotleChicken.html" class="block p-2 text-xl"
-              >Adobo Chicken</a
-            >
-          </li>
-          <li>
-            <a href="./AlPastor.html" class="block p-2 text-xl"
-              >Al Pastor Pork</a
-            >
-          </li>
-          <li>
-            <a href="./BirriaBeef.html" class="block p-2 text-xl"
-              >Birria Beef</a
-            >
-          </li>
-          <li>
-            <a href="./CarneAsada.html" class="block p-2 text-xl"
-              >Carne Asada</a
-            >
-          </li>
-          <li>
-            <a href="./CauliflowerTacos.html" class="block p-2 text-xl"
-              >Cauliflower Tacos</a
-            >
-          </li>
-        </ul>
-        <footer class="flex-shrink mt-auto">
-          <a href="./about.html" class="block p-4">About</a>
-        </footer>
-      </div>
-      <div
-        id="overlay"
-        class="fixed inset-0 hidden bg-black bg-opacity-50"
-      ></div>
-    </main>
+    <main></main>
   </body>
 </html>
