--- a/ChipotleChicken.html
+++ b/ChipotleChicken.html
@@ -15,18 +15,56 @@
     <main>
       <section>
         <h2>Marinate the chicken thighs</h2>
-        <p>1. Place the Chicken Thighs in a resealable bag, or large bowl. *Chef note: poke a few holes in the Chicken Thighs with a fork for even better results</p><br>
-        <p>2. Place the Chicken Thighs in a resealable bag, or large bowl. *Chef note: poke a few holes in the Chicken Thighs with a fork for even better results</p><br>
-        <p>3. Seal the bag or the bowl and place in the refrigerator</p><br>
-        <p>4. Allow the meat to marinate for at least an hour *Chef note: it is best if it is allowed to marinate overnight</p><br>
+        <p>
+          1. Place the Chicken Thighs in a resealable bag, or large bowl. *Chef
+          note: poke a few holes in the Chicken Thighs with a fork for even
+          better results
+        </p>
+        <br />
+        <p>
+          2. Place the Chicken Thighs in a resealable bag, or large bowl. *Chef
+          note: poke a few holes in the Chicken Thighs with a fork for even
+          better results
+        </p>
+        <br />
+        <p>3. Seal the bag or the bowl and place in the refrigerator</p>
+        <br />
+        <p>
+          4. Allow the meat to marinate for at least an hour *Chef note: it is
+          best if it is allowed to marinate overnight
+        </p>
+        <br />
       </section>
       <section>
-        <h3>Cook the Chicken Thighs</h3><br>
-        <p>1. Remove the Chicken Thighs from the refrigerator *Chef Note: Set the bowl or resealable bag out on the counter for 30-45min before cooking</p><br>
-        <p>2. Preheat your BBQ grill before cooking *Chef Note: the hotter the better, as getting a little char on the marinade really brings out the flavor</p><br>
-        <p>3. Sear the Chicken Thighs 2min per side on the hot grill</p><br>
-        <p>4. Cook the Chicken Thighs until they are cooked through; 165-175 degrees internal temperature *Chef note: Chicken Thighs cook rather quickly on a hot grill, so keep a close eye on them</p><br>
-        <p>5. Let the Chicken Thighs rest for 10 minutes after they have been cooked, then serve in your favorite tacos, burritos, or as a stand-alone meat with your meal *Chef note: the Chicken Thighs will continue to cook while they rest, so make sure you plan for that in your cooking time and temperature</p><br>
+        <h3>Cook the Chicken Thighs</h3>
+        <br />
+        <p>
+          1. Remove the Chicken Thighs from the refrigerator *Chef Note: Set the
+          bowl or resealable bag out on the counter for 30-45min before cooking
+        </p>
+        <br />
+        <p>
+          2. Preheat your BBQ grill before cooking *Chef Note: the hotter the
+          better, as getting a little char on the marinade really brings out the
+          flavor
+        </p>
+        <br />
+        <p>3. Sear the Chicken Thighs 2min per side on the hot grill</p>
+        <br />
+        <p>
+          4. Cook the Chicken Thighs until they are cooked through; 165-175
+          degrees internal temperature *Chef note: Chicken Thighs cook rather
+          quickly on a hot grill, so keep a close eye on them
+        </p>
+        <br />
+        <p>
+          5. Let the Chicken Thighs rest for 10 minutes after they have been
+          cooked, then serve in your favorite tacos, burritos, or as a
+          stand-alone meat with your meal *Chef note: the Chicken Thighs will
+          continue to cook while they rest, so make sure you plan for that in
+          your cooking time and temperature
+        </p>
+        <br />
       </section>
     </main>
 
