--- a/recipe-ChipotleChicken.html
+++ b/recipe-ChipotleChicken.html
@@ -12,15 +12,40 @@
     <script defer src="./assets/js/homepage.js"></script>
   </head>
   <body class="chicken-bg relative">
-    <header>
+    <header
+      id="logoBackgroundSmall"
+      class="bg-gradient-to-r from-transparent to-white flex-shrink"
+    >
       <button
         id="menuButton"
         class="absolute top-10 left-10 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
       >
         Menu
       </button>
+      <img
+        id="logoSmall"
+        src="./assets/logo/YesChefLogoBlack.svg"
+        alt="Yes, Chef Logo"
+        class="relative ml-auto mr-4"
+      />
       <div id="menuContainer"></div>
     </header>
-    <main></main>
+    <main>
+      <section class="m-4 p-4 bg-white bg-opacity-60 text-gray-900 rounded">
+        <h2>Ingredients</h2>
+        <ul>
+          <li>3lbs Boneless, Skinless Chicken Thighs</li>
+          <li>1 Red Onion</li>
+          <li>1 Can of Chipotle Chilis in Adobo Sauce</li>
+          <li>6 Cloves of Garlic</li>
+          <li>4 Tablespoons of Ancho Chili Powder</li>
+          <li>4 Teaspoons of Ground Cumin</li>
+          <li>4 Teaspoons of Mexican Oregano</li>
+          <li>2 Teaspoons of Salt</li>
+          <li>1 Teaspoon of Black Pepper</li>
+          <li>1 Teaspoon of Black Pepper</li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
