--- a/menu.html
+++ b/menu.html
@@ -5,35 +5,35 @@
   <ul class="flex-grow p-2">
     <li class="block pl-2 pb-4 text-xl">Select a Recipe:</li>
     <li>
-      <a href="./recipe-ChipotleChicken.html" class="block p-2 text-xl"
+      <a href="../recipe-ChipotleChicken.html" class="block p-2 text-xl"
         >Adobo Chicken</a
       >
     </li>
     <li>
-      <a href="./recipe-AlPastor.html" class="block p-2 text-xl"
+      <a href="../recipe-AlPastor.html" class="block p-2 text-xl"
         >Al Pastor Pork</a
       >
     </li>
     <li>
-      <a href="./recipe-BirriaBeef.html" class="block p-2 text-xl"
+      <a href="../recipe-BirriaBeef.html" class="block p-2 text-xl"
         >Birria Beef</a
       >
     </li>
     <li>
-      <a href="./recipe-CarneAsada.html" class="block p-2 text-xl"
+      <a href="../recipe-CarneAsada.html" class="block p-2 text-xl"
         >Carne Asada</a
       >
     </li>
     <li>
-      <a href="./recipe-CauliflowerTacos.html" class="block p-2 text-xl"
+      <a href="../recipe-CauliflowerTacos.html" class="block p-2 text-xl"
         >Cauliflower Tacos</a
       >
     </li>
   </ul>
   <footer class="flex-shrink-0 mt-auto flex justify-center items-center p-4">
-    <a href="./index.html" class="p-4">Home</a>
+    <a href="../index.html" class="p-4">Home</a>
     <p class="pt-4 pb-4">|</p>
-    <a href="./about.html" class="p-4">About</a>
+    <a href="../about.html" class="p-4">About</a>
   </footer>
 </div>
 <div id="overlay" class="fixed inset-0 hidden bg-black bg-opacity-50"></div>
