section content added.  Needs js and final css formatting.

--- a/recipe-ChipotleChicken.html
+++ b/recipe-ChipotleChicken.html
@@ -31,8 +31,16 @@
     </header>
     <div id="menuContainer"></div>
     <main>
-      <section class="m-4 p-4 bg-white bg-opacity-60 text-gray-900 rounded">
-        <h2>Ingredients</h2>
+      <section
+        class="m-4 p-4 bg-white bg-opacity-80 text-gray-900 rounded w-max mx-auto"
+      >
+        <h1>Adobo Chicken</h1>
+      </section>
+
+      <section
+        class="m-4 p-4 bg-white bg-opacity-80 text-gray-900 rounded w-max mx-auto"
+      >
+        <h2>Ingredients:</h2>
         <ul>
           <li>3lbs Boneless, Skinless Chicken Thighs</li>
           <li>1 Red Onion</li>
@@ -45,6 +53,19 @@
           <li>1 Teaspoon of Black Pepper</li>
           <li>1 Teaspoon of Black Pepper</li>
         </ul>
+      </section>
+
+      <section
+        class="flex-grow m-4 bg-white bg-opacity-80 text-gray-900 rounded w-max mx-auto"
+      >
+        <button class="m-4 p-2 bg-gray-800 bg-opacity-50 text-white rounded">
+          Generate Shopping List</button
+        ><a
+          href="./ChipotleChicken.html"
+          class="m-4 p-2 bg-gray-800 bg-opacity-50 text-white rounded"
+        >
+          I have everything! Let's Cook!
+        </a>
       </section>
     </main>
   </body>
