--- a/recipe-ChipotleChicken.html
+++ b/recipe-ChipotleChicken.html
@@ -42,16 +42,39 @@
       >
         <h2>Ingredients:</h2>
         <ul>
-          <li>3lbs Boneless, Skinless Chicken Thighs</li>
-          <li>1 Red Onion</li>
-          <li>1 Can of Chipotle Chilis in Adobo Sauce</li>
-          <li>6 Cloves of Garlic</li>
-          <li>4 Tablespoons of Ancho Chili Powder</li>
-          <li>4 Teaspoons of Ground Cumin</li>
-          <li>4 Teaspoons of Mexican Oregano</li>
-          <li>2 Teaspoons of Salt</li>
-          <li>1 Teaspoon of Black Pepper</li>
-          <li>1 Teaspoon of Black Pepper</li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            3lbs Boneless, Skinless Chicken Thighs
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />1 Red Onion
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />1 Can of Chipotle Chilis in
+            Adobo Sauce
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />6 Cloves of Garlic
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />4 Tablespoons of Ancho Chili
+            Powder
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />4 Teaspoons of Ground Cumin
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />4 Teaspoons of Mexican Oregano
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />2 Teaspoons of Salt
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />1 Teaspoon of Black Pepper
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />1 Teaspoon of Black Pepper
+          </li>
         </ul>
       </section>
 
