--- a/recipe-CarneAsada.html
+++ b/recipe-CarneAsada.html
@@ -12,15 +12,55 @@
     <script defer src="./assets/js/homepage.js"></script>
   </head>
   <body class="carneAsada-bg relative">
-    <header>
+    <header
+      id="logoBackgroundSmall"
+      class="bg-gradient-to-r from-transparent to-white flex-shrink"
+    >
       <button
         id="menuButton"
         class="absolute top-10 left-10 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
       >
         Menu
       </button>
+      <img
+        id="logoSmall"
+        src="./assets/logo/YesChefLogoBlack.svg"
+        alt="Yes, Chef Logo"
+        class="relative ml-auto mr-4"
+      />
     </header>
     <div id="menuContainer"></div>
-    <main></main>
+    <main>
+      <section
+        class="m-4 p-4 bg-white bg-opacity-80 text-gray-900 rounded w-max mx-auto"
+      >
+        <h1>Carne Asada Steak</h1>
+      </section>
+
+      <section
+        class="m-4 p-4 bg-white bg-opacity-80 text-gray-900 rounded w-max mx-auto"
+      >
+        <h2>Ingredients:</h2>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            LOREM
+          </li>
+        </ul>
+      </section>
+
+      <section
+        class="flex-grow m-4 bg-white bg-opacity-80 text-gray-900 rounded w-max mx-auto"
+      >
+        <button class="m-4 p-2 bg-gray-800 bg-opacity-50 text-white rounded">
+          Generate Shopping List</button
+        ><a
+          href="./CarneAsada.html"
+          class="m-4 p-2 bg-gray-800 bg-opacity-50 text-white rounded"
+        >
+          I have everything! Let's Cook!
+        </a>
+      </section>
+    </main>
   </body>
 </html>
