--- a/recipe-CauliflowerTacos.html
+++ b/recipe-CauliflowerTacos.html
@@ -34,7 +34,7 @@
       <section
         class="m-4 p-4 bg-white bg-opacity-80 text-gray-900 rounded w-max mx-auto"
       >
-        <h1>Cauliflower Tacos</h1>
+        <h1 class="text-4xl font-semibold">Cauliflower Tacos</h1>
       </section>
 
       <section
