--- a/recipe-ChipotleChicken.html
+++ b/recipe-ChipotleChicken.html
@@ -34,7 +34,7 @@
       <section
         class="m-4 p-4 bg-white bg-opacity-80 text-gray-900 rounded w-max mx-auto"
       >
-        <h1>Adobo Chicken</h1>
+        <h1 class="text-4xl font-semibold">Adobo Chicken</h1>
       </section>
 
       <section
@@ -73,7 +73,7 @@
             <input type="checkbox" class="mr-2" />1 Teaspoon of Black Pepper
           </li>
           <li class="flex items-center">
-            <input type="checkbox" class="mr-2" />1 Teaspoon of Black Pepper
+            <input type="checkbox" class="mr-2" />4 Tablespoons of Olive Oil
           </li>
         </ul>
       </section>
