--- a/recipe-BirriaBeef.html
+++ b/recipe-BirriaBeef.html
@@ -34,7 +34,7 @@
       <section
         class="m-4 p-4 bg-white bg-opacity-80 text-gray-900 rounded w-max mx-auto"
       >
-        <h1>Birria Shredded Beef</h1>
+        <h1 class="text-4xl font-semibold">Birria Shredded Beef</h1>
       </section>
 
       <section
