added Birria Shredded Beef ingredients.

--- a/recipe-BirriaBeef.html
+++ b/recipe-BirriaBeef.html
@@ -43,8 +43,75 @@
         <h2>Ingredients:</h2>
         <ul>
           <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />5lbs Beef Chuck Roast
+          </li>
+          <li class="flex items-center">
             <input type="checkbox" class="mr-2" />
-            LOREM
+            2 Roma Tomatoes
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1/2 Yellow Onion
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            12 Dried Guajillo Chiles
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            5 Ancho Chiles
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            5 Árbol Chiles
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            2 Cups of Beef Broth
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1/4 Cup White Vinegar (Distilled)
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            5 Garlic Cloves
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 1/2 Tablespoon Olive Oil
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1/2 Tablespoon Kosher Salt
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1/2 Tablespoon Black Pepper
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Teaspoon Ground Cumin
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Teaspon Dried Mexican Oregano
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1/2 Teaspoon Whole Black Peppercorns
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1/4 Teaspoon Ground Cloves
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            2 2" Mexican Cinnamon Sticks
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            3 Bay Leaves
           </li>
         </ul>
       </section>
