--- a/recipe-AlPastor.html
+++ b/recipe-AlPastor.html
@@ -44,7 +44,71 @@
         <ul>
           <li class="flex items-center">
             <input type="checkbox" class="mr-2" />
-            LOREM
+            3lbs Pork Shoulder (or Pork Butt) in 1/4" Slices
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Pineapple
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Yellow Onion
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Tablespoon Olive Oil
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Cup Chicken Stock
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            4 Garlic Cloves
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            5 Guajillo Chiles
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            2 Bay Leaves
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1/4 Cup Apple Cider Vinegar
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            2 Chipotle Chiles in Adobo Sauce
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Tablespoon Achiote Paste
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Tablespoon Kosher Salt
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Teaspoon Cumin
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Teaspoon Mexican Oregano
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1/2 Teaspoon Black Pepper
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1/2 Teaspoon All Spice
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1/4 Cup Canned Pineapple Juice
           </li>
         </ul>
       </section>
