Cauliflower tacos ingredients added to recipe/shopping list html page.

--- a/recipe-CauliflowerTacos.html
+++ b/recipe-CauliflowerTacos.html
@@ -40,11 +40,147 @@
       <section
         class="m-4 p-4 bg-white bg-opacity-80 text-gray-900 rounded w-max mx-auto"
       >
-        <h2>Ingredients:</h2>
+        <h2 class="pb-1">Taco Assembly Ingredients:</h2>
         <ul>
           <li class="flex items-center">
             <input type="checkbox" class="mr-2" />
-            LOREM
+            12-16 Corn Tortillas (Street Taco Size)
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Lime
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Fresh Bunch of Cilantro
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1/4 Head of Red Cabbage
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            2 Small Avocados
+          </li>
+        </ul>
+
+        <h2 class="pt-4 pb-1">Roasted Cauliflower Ingredients:</h2>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            2 Heads of Cauliflower
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            4 Tablespoons of Avocado Oil
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            2 Teaspoons of Ground Cumin
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            2 Teaspoons of Ancho Chili Powder
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            2 Teaspoons of Smoked Paprika
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            2 Teaspoons of Mexican Oregano
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Teaspoon Sea Salt
+          </li>
+        </ul>
+
+        <h2 class="pt-4 pb-1">Chipotle Sauce Ingredients:</h2>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1/4 Cup Raw Almonds
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Can of Diced Fire-Roasted Tomatoes
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Can of Chipotle Peppers in Adobo Sauce
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            4 Garlic Cloves with Skin
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            2 Peeled Garlic Cloves
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Lime
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            2 Tablespoons of Avocado Oil
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1/2 Teaspoon of Ground Cumin
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1/4 Teaspoon of Smoked Paprika
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1/4 Teaspoon of Sea Salt
+          </li>
+        </ul>
+        <ul>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Tablespoon of Raw Honey
           </li>
         </ul>
       </section>
