--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
     </li>
   </ul>
   <footer
-    class="flex-shrink-0 mt-auto flex justify-center items-center p-4 text-lg text-gray-700 font-normal"
+    class="flex-shrink-0 mt-auto flex justify-center items-center p-4 text-xl text-gray-700 font-normal"
   >
     <a href="./index.html" class="p-4">Home</a>
     <p class="pt-4 pb-4">|</p>
