--- a/recipe-CarneAsada.html
+++ b/recipe-CarneAsada.html
@@ -49,7 +49,63 @@
         <ul>
           <li class="flex items-center">
             <input type="checkbox" class="mr-2" />
-            LOREM
+            3lbs Arrachera - Mexican Skirt Steak
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            3 Limes
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Yellow Onion
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Large Orange
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Tomato
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Bottle of Corona
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            2 Jalapeños
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            5 Garlic Cloves
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1/4 Cup Ancho Chili Powder
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1/4 Cup Mirin
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            2 Tablespoons of Avocado Oil
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            2 Tablespoons White Sugar
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Tablespoon Salt
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Tablespoon Black Pepper
+          </li>
+          <li class="flex items-center">
+            <input type="checkbox" class="mr-2" />
+            1 Fresh Bunch of Cilantro
           </li>
         </ul>
       </section>
