--- a/ChipotleChicken.html
+++ b/ChipotleChicken.html
@@ -5,15 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Al Pastor Cooking Guide</title>
     <link rel="stylesheet" href="./assets/css/cooking.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
+
   <body
     class="bg-fixed bg-cover bg-center"
     style="background-image: url(./assets/images/ChipotleChickenBackground.jpg)"
   >
-    <header class="background">Let's Start Cooking Chipotle Chicken!</header>
+    <header 
+      id="logoBackgroundSmall"
+      class="bg-gradient-to-r from-transparent to-white flex-shrink text-center"
+    >
+      <button
+        id="menuButton"
+        class="absolute top-10 left-10 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
+      >
+        Menu
+      </button>
+      <img
+        id="logoSmall"
+        src="./assets/logo/YesChefLogoBlack.svg"
+        alt="Yes, Chef Logo"
+        class="relative ml-auto mr-4"
+      />Let's Start Cooking Chipotle Chicken!
+    </header>
+    <br />
     <main>
-      <section>
+      <section class="p-4 bg-white bg-opacity-40 rounded w-max mx-auto">
         <h2>Marinate the chicken thighs</h2>
         <p>
           1. Place the Chicken Thighs in a resealable bag, or large bowl. *Chef
@@ -35,7 +54,8 @@
         </p>
         <br />
       </section>
-      <section>
+      <br />
+      <section class="p-4 bg-white bg-opacity-40 rounded w-max mx-auto">
         <h3>Cook the Chicken Thighs</h3>
         <br />
         <p>
@@ -57,7 +77,7 @@
           quickly on a hot grill, so keep a close eye on them
         </p>
         <br />
-        <p>
+        <p class="text-">
           5. Let the Chicken Thighs rest for 10 minutes after they have been
           cooked, then serve in your favorite tacos, burritos, or as a
           stand-alone meat with your meal *Chef note: the Chicken Thighs will
@@ -67,7 +87,6 @@
         <br />
       </section>
     </main>
-
     <script src="./cooking.js"></script>
   </body>
 </html>
